# pareto-lab.github.io

./: .gitignore  404.html  AGENTS.md  CNAME  README.md  RELEASE.md  index.html  index_for_api.html  package-lock.json  package.json  publish.js  release.js  robots.txt  sitemap.xml  tailwind.config.ts  vite.config.ts  하우스인어스 이용약관.txt
houseinus-api/: .gitignore  AGENTS.md  EMAIL_README.md  OAUTH_README.md  README.md  alembic.ini  cli.py  config.example.json  docker-compose.yml  houseinus-api.service  index_for_api.html  install_service.py  publish.py  pyproject.toml  refresh_property_4_data.py  release.py  run_dev.py  run_prod.py  seed_property_4.py
houseinus-api/agent/: AGENTS.md
houseinus-api/alembic/: env.py
houseinus-api/alembic/versions/: 0001_initial_user_auth.py  0002_admin_role_and_ban.py  0003_properties.py  0004_inquiries_mbti_open_house.py  0005_drop_legacy_open_house_col.py  0006_enums_to_integers.py  0007_admin_notification_prefs.py  0008_user_enums_to_integers.py  0009_open_house_inquiries.py  0010_matched_property_subscribe.py  0011_property_publish_key.py  0012_lifestyle_layout.py  0013_property_delivery_link.py  0014_delivery_question_notify.py  0015_lifestyle_story_overlay.py  0016_drop_publish_key.py  0017_property_print_job.py  0018_blog.py  0019_blog_reference_date.py  0020_notify_delivery_publish.py  0021_split_user_admin_profile.py  0022_drop_property_files.py  0023_user_terms_fields.py
houseinus-api/app/: config.py  database.py  main.py
houseinus-api/app/api/: deps.py  og.py  sitemap.py
houseinus-api/app/core/: errors.py  redis_client.py  (+2 more)
(+220 files in other folders)
