[project]
name = "houseinus-api"
version = "0.1.0"
description = "House in Us backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis[hiredis]>=5.2.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2.0",
    "email-validator>=2.2.0",
    "aiosmtplib>=3.0.0",
    "playwright>=1.48.0",
    "mcp>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
